--- a/templates/myTemplates/css/template.css
+++ b/templates/myTemplates/css/template.css
@@ -6,9 +6,9 @@
       for styling website with current file.
       colors with #RGBA format (not ARGB)
       */
-    --user-primary--color: #df2030;
+    --user-primary--color: #dd102e;
     --user-primary--color-transparent: #C5003Ecc;
-    --user-secondary--color: #000;
+    --user-secondary--color:  #1b2d4b;
     --user-muted--color: #64686F;
     --user-primarytext--color: #000000;
     --user-ligthtext--color: #64686F;
