--- a/templates/myTemplates/css/invisible_styles.css
+++ b/templates/myTemplates/css/invisible_styles.css
@@ -1,4 +1,3 @@
-
 a:hover {
     text-decoration: none !important;
 }
@@ -250,12 +249,36 @@ nav img {
 .hidden-block{
     text-align: center;
 }
+.img-header img{
+    width: calc(100vw - 20px);
+    margin-left: calc(-50vw + 50% + 10px);
+}
+.portfolio-text{
+    text-align: justify !important;
+}
+.com-content-category-blog img{
+    width: 65%;
+    height: 15rem;
+    object-fit: cover;
+}
+.item-content {
+    width: 65%;
+    text-align: justify;
+}
+
+.item-content .readmore a {
+    background-color: var(--user-secondary--color) !important;
+    color: #fff !important;
+    font-size: inherit;
+    border-radius: 0.375rem !important;
+}
+
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
     .portfolio-text {
         flex: 0 0 auto;
         width: 100%;
-        text-align: justify;
+
     }
 
     .portfolio-img {
@@ -284,7 +307,7 @@ nav img {
     .portfolio-text {
         flex: 0 0 auto !important;
         width: 100% !important;
-        text-align: justify;
+
     }
 
     .portfolio-img {
@@ -323,7 +346,7 @@ nav img {
     .portfolio-text {
         flex: 0 0 auto !important;
         width: 50% !important;
-        text-align: justify;
+
     }
 
     .portfolio-img {
@@ -347,7 +370,7 @@ nav img {
     .portfolio-text {
         flex: 0 0 auto !important;
         width: 50% !important;
-        text-align: justify;
+
     }
 
     .portfolio-img {
